# DTVM

./: .gitignore  .gitmodules  BUILD.bazel1.2.1  CMakeLists.txt  README.md  WORKSPACE_no_llvm  build.sh  run.sh
.ci/: run_test_suite.sh
.github/workflows/: commit-lint.yml  dtvm_evm_test_x86.yml  dtvm_test_x86.yml
docs/: COMMIT_CONVENTION.md
src/: CMakeLists.txt  zetaengine-c.cpp  zetaengine-c.h  zetaengine.h
src/action/: CMakeLists.txt  evm_module_loader.h  module_loader.cpp  module_loader.h
src/cli/: CMakeLists.txt  dtvm.cpp
src/common/: defines.h  enums.h  errors.def  type.h
src/evm/: CMakeLists.txt  baseline.h  baseline_analysis.cpp  baseline_execution.cpp  execution_state.h  instructions_opcodes.h  interpreter.cpp  interpreter.h  opcode_handlers.cpp  opcode_handlers.h
src/evmc/: bytes.hpp  evmc.h  evmc.hpp  helpers.h  hex.hpp  instructions.h  loader.h  mocked_host.h  tooling.hpp  utils.h
src/evmone/: CMakeLists.txt  baseline.hpp  baseline_analysis.cpp  baseline_execution.cpp  baseline_instruction_table.cpp  baseline_instruction_table.hpp  constants.hpp  delegation.cpp  delegation.hpp  eof.cpp  eof.hpp  evmone.h  execution_state.hpp  instructions.hpp  instructions_calls.cpp  instructions_opcodes.hpp  instructions_storage.cpp  instructions_traits.hpp  instructions_xmacro.hpp  tracing.cpp  tracing.hpp  vm.cpp  vm.hpp
src/evmone_precompiles/: CMakeLists.txt  hash_types.h  keccak.c  keccak.h  keccak.hpp
src/host/: CMakeLists.txt
src/intx/: intx.hpp
src/runtime/: CMakeLists.txt  destroyer.cpp  (+12 more)
tools/: easm2bytecode.py  easm2bytecode.sh  format.sh
(+80 files in other folders)
